[PhuHV] Add manage users function.